# p2c

./: CMakeLists.txt  LICENSE  README.md  build.txt
csrc/: CMakeLists.txt
csrc/ast/: codegen.cpp  codegen.h
csrc/core/: CMakeLists.txt  p2c.cpp  p2c.h
csrc/core/codegen/: CMakeLists.txt  codegen.cpp  codegen.h
csrc/core/conversion/: CMakeLists.txt  DCEPass.cpp  DCEPass.h  LowerToLLVM.cpp  LowerToLLVM.h
csrc/core/dialect/: CMakeLists.txt  FirDialect.cpp  FirDialect.h  FirDialect.td  FirOps.cpp  FirOps.h  FirOps.td
csrc/core/jit/: CMakeLists.txt  cpu_jit.h  runner.cpp  runner.h
csrc/core/test/: jit_test.py
csrc/python/: export.cpp  export.h
python/: basic_closure_test.py  basic_test.py  binary_test.py  closure_call.py  float_test.py  for_list_iteration_test.py  if_test.py  input_and_output_test.py  int_test.py  list_test.py  multi_func_test.py  unary_test.py  unpack_decl_test.py  while_test.py
python/p2c/ast/: ast_utils.py  ast_visitor.py  stack.py  transform.py
python/p2c/ir/: expr.py  func.py  moduler.py  parameter.py  primitive_type.py  record.py  stmt.py  struct.py
python/p2c/kernel/: kernel.py  kernel_arguments.py  kernel_builder.py
python/p2c/test/: another.c  basic_test.py  closure_test.py  example.c  test.c
